# libotosis

./: .cvsignore  .gitignore  Makefile.am  acconfig.h  autogen.sh  configure.in  options.def
mint_portab/: Makefile.am  basepage.h  compiler.h  gemfast.h  linea.h  osbind.h
src/: .gitignore  Makefile.am  bios.h  bios_vt52.c  biosbind.c  biosbind.h  client_endian.h  div.h  file_emu.c  gemdos.h  gemdos_chardev.c  gemdos_dispatch.c  gemdos_file.c  gemdos_mem.c  gemdosbind.c  init.c  libotosis.h  libotosis_option.h  linea.c  lineabind.h  memory.h  mint.h  mint_dispatch.c  mint_file.c  mint_proc.c  mintbind.c  mintbind.h  optfile.c  prototypes.h  strace.c  toserrors.h  trace.c  tty.c  xbios.h  xbios_hw.c  xbiosbind.c  xbiosbind.h
test/: calls.txt
test/m68kbin/: dcreate1  dfree1  fcntl1  fsfirstnext  fsfirstnext1  fxattr1  hello  hello.tos
test/src/: Makefile-68k  dcreate1.c  dfree1.c  fcntl1.c  fsfirstnext1.c  fxattr1.c  hello.c
tools/: .cvsignore  .gitignore  Makefile.am  options_to_c.awk
